--- a/style.css
+++ b/style.css
@@ -12,19 +12,50 @@ overflow: hidden;
 background-color: black;
 }
 
-/* Video container full screen */
-.video-container {
-position: fixed;
-top: 0;
-left: 0;
-width: 100vw;
-height: 100vh;
-  z-index: -1; /* di belakang elemen lain */
-}
-
 /* Video responsive */
 video#weddingVideo {
 width: 100%;
 height: 100%;
 object-fit: cover; /* or use contain if prefer */
+}
+
+.video-container {
+position: fixed;
+top: 0; left: 0;
+width: 100vw;
+height: 100vh;
+z-index: 0;
+}
+
+.content {
+position: relative;
+z-index: 1;
+color: white;
+}
+
+video {
+width: 100vw;
+height: 100vh;
+object-fit: cover;
+}
+
+.start-overlay {
+position: fixed;
+top: 0; left: 0;
+width: 100vw;
+height: 100vh;
+background-color: rgba(0, 0, 0, 0.85);
+display: flex;
+justify-content: center;
+align-items: center;
+z-index: 9999;
+}
+
+#startButton {
+padding: 1em 2em;
+font-size: 1.5rem;
+background-color: #fff;
+border: none;
+border-radius: 10px;
+cursor: pointer;
 }
