--- a/style.css
+++ b/style.css
@@ -14,9 +14,10 @@ background-color: black;
 
 /* Video responsive */
 video#weddingVideo {
-width: 100%;
-height: 100%;
-object-fit: fill; /* or use contain if prefer */
+    width: 100vw;
+    height: 100vh;
+    object-fit: contain;
+    background: black;
 }
 
 .video-container {
